--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,7 +25,7 @@
         <!-- Left image -->
         <div class="relative group rounded-lg sm:rounded-2xl bg-slate-900/80 border border-slate-800 overflow-hidden flex items-center justify-center min-h-[280px] sm:min-h-[350px] md:min-h-auto">
           <img
-            src="https://images.pexels.com/photos/2706379/pexels-photo-2706379.jpeg?auto=compress&cs=tinysrgb&w=800"
+            src="https://i.pinimg.com/736x/9c/0c/76/9c0c764aa9649ee19fa67e9d6d0f7a48.jpg"
             alt="Изображение A"
             class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition"
           />
@@ -80,7 +80,7 @@
         <!-- Right image -->
         <div class="relative group rounded-lg sm:rounded-2xl bg-slate-900/80 border border-slate-800 overflow-hidden flex items-center justify-center min-h-[280px] sm:min-h-[350px] md:min-h-auto">
           <img
-            src="https://images.pexels.com/photos/2706378/pexels-photo-2706378.jpeg?auto=compress&cs=tinysrgb&w=800"
+            src="https://habrastorage.org/getpro/habr/upload_files/5e5/3d0/62a/5e53d062a0b196f2fffe4ad0dda07ab7.jpg"
             alt="Изображение B"
             class="w-full h-full object-cover opacity-80 group-hover:opacity-100 transition"
           />
