--- a/views/index2.hbs
+++ b/views/index2.hbs
@@ -44,7 +44,7 @@
             <div class="relative w-full aspect-square rounded-lg sm:rounded-xl overflow-hidden border-2 border-slate-700 bg-slate-800 group">
               <img 
                 id="imageLeft"
-                src="https://images.pexels.com/photos/2706379/pexels-photo-2706379.jpeg?auto=compress&cs=tinysrgb&w=800" 
+                src="https://habrastorage.org/getpro/habr/upload_files/5e5/3d0/62a/5e53d062a0b196f2fffe4ad0dda07ab7.jpg" 
                 alt="Изображение 1"
                 class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
               />
@@ -89,7 +89,7 @@
             <div class="relative w-full aspect-square rounded-lg sm:rounded-xl overflow-hidden border-2 border-slate-700 bg-slate-800 group">
               <img 
                 id="imageRight"
-                src="https://images.pexels.com/photos/3807517/pexels-photo-3807517.jpeg?auto=compress&cs=tinysrgb&w=800" 
+                src="https://i.pinimg.com/736x/02/ac/a9/02aca9d3af07aa8118e4e60d37af94d0.jpg" 
                 alt="Изображение 2"
                 class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
               />
